--- a/HomeWork.api/appsettings.json
+++ b/HomeWork.api/appsettings.json
@@ -1,4 +1,6 @@
+//docker run -p 3306:3306 --name mysql -v /mydata/mysql/log:/var/log/mysql -v /mydata/mysql/data:/var/lib/mysql -v /mydata/mysql/conf:/etc/mysql -e MYSQL_ROOT_PASSWORD=root -d mysql:latest
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "MyDbContext": ""
+    "MyDbContext": "data source=127.0.0.1;port=3306;userid=root;password=1234;database=HomeWorkDataBase;Charset=utf;TreatTinyAsBoolean=false;"
   },
   "AllowedHosts": "*"
 }
