--- a/HomeWork.api/appsettings.json
+++ b/HomeWork.api/appsettings.json
@@ -1,4 +1,4 @@
-//docker run -p 3306:3306 --name mysql -v /mydata/mysql/log:/var/log/mysql -v /mydata/mysql/data:/var/lib/mysql -v /mydata/mysql/conf:/etc/mysql -e MYSQL_ROOT_PASSWORD=root -d mysql:latest
+//docker run -p 3306:3306 --name mysql -e MYSQL_ROOT_PASSWORD=1234 -d mysql:8
 {
 
   "Logging": {
