add maui and restsharp

--- a/HomeWork.api/HomeWork.api.csproj
+++ b/HomeWork.api/HomeWork.api.csproj
@@ -20,6 +20,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeWork.Share\HomeWork.Share.csproj" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
